log
Thu 09 May 2024 09:15:31 PM UTC: 
 tests:  1|8
total_score: 0/70
3fb9697
Thu 09 May 2024 09:17:44 PM UTC: 
 treemap.c | 24 +++++++++++++++++++++---
 1 file changed, 21 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   51 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
f650be4
Thu 09 May 2024 09:18:05 PM UTC: 
 treemap.c | 15 ---------------
 1 file changed, 15 deletions(-)
 tests:  4|7
total_score: 5/70
39c0fc9
Thu 09 May 2024 09:42:52 PM UTC: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  6|6
total_score: 15/70
b1fc28f
Thu 09 May 2024 09:44:29 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
b189c81
